[package]
name = "tx_callbacks"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.3", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
dashmap = "6.1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0.98"
tokio-util = "0.7.15"
